--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "start": "nx dev",
+    "build": "nx build"
   },
   "private": true,
   "dependencies": {},
@@ -28,5 +27,6 @@
     "sass": "latest",
     "tailwindcss": "~3.0.23",
     "typescript": "~4.5.5"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
