--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prettier-plugin-tailwindcss": "~0.1.8",
     "rehype-autolink-headings": "~6.1.1",
     "rehype-external-links": "~1.0.1",
-    "sass": "latest",
+    "sass": "^1.53.0",
     "tailwindcss": "~3.0.23",
     "typescript": "~4.5.5"
   },
