--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@builder.io/partytown": "~0.5.0",
+    "@builder.io/partytown": "0.5.0",
     "@nrwl/cli": "13.8.3",
     "@nrwl/tao": "13.8.3",
     "@nrwl/workspace": "13.8.3",
     "@nxtensions/astro": "2.1.0",
-    "@types/node": "~16.11.7",
+    "@types/node": "16.11.7",
     "astro": "0.24.0",
-    "autoprefixer": "~10.4.2",
-    "fs-extra": "~10.0.1",
-    "postcss": "~8.4.7",
+    "autoprefixer": "10.4.2",
+    "fs-extra": "10.0.1",
+    "postcss": "8.4.7",
     "prettier": "2.5.1",
-    "prettier-plugin-astro": "~0.0.12",
-    "prettier-plugin-tailwindcss": "~0.1.8",
-    "rehype-autolink-headings": "~6.1.1",
-    "rehype-external-links": "~1.0.1",
-    "sass": "^1.53.0",
-    "tailwindcss": "~3.0.23",
-    "typescript": "~4.5.5"
+    "prettier-plugin-astro": "0.0.12",
+    "prettier-plugin-tailwindcss": "0.1.8",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-external-links": "1.0.1",
+    "sass": "1.53.0",
+    "tailwindcss": "3.0.23",
+    "typescript": "4.5.5"
   },
   "packageManager": "yarn@1.22.19"
 }
