--- a/package.json
+++ b/package.json
@@ -7,26 +7,29 @@
     "build": "nx build"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@astrojs/rss": "^0.2.0"
+  },
   "devDependencies": {
-    "@builder.io/partytown": "0.5.0",
-    "@nrwl/cli": "13.8.3",
-    "@nrwl/tao": "13.8.3",
-    "@nrwl/workspace": "13.8.3",
-    "@nxtensions/astro": "2.1.0",
+    "@builder.io/partytown": "0.6.2",
+    "@nrwl/cli": "14.3.6",
+    "@nrwl/tao": "14.3.6",
+    "@nrwl/workspace": "14.3.6",
+    "@nxtensions/astro": "2.3.0",
     "@types/node": "16.11.7",
-    "astro": "0.24.0",
-    "autoprefixer": "10.4.2",
-    "fs-extra": "10.0.1",
-    "postcss": "8.4.7",
-    "prettier": "2.5.1",
-    "prettier-plugin-astro": "0.0.12",
-    "prettier-plugin-tailwindcss": "0.1.8",
+    "astro": "1.0.0-beta.59",
+    "autoprefixer": "10.4.7",
+    "fs-extra": "10.1.0",
+    "postcss": "8.4.14",
+    "prettier": "2.7.1",
+    "prettier-plugin-astro": "0.1.1",
+    "prettier-plugin-tailwindcss": "0.1.11",
     "rehype-autolink-headings": "6.1.1",
     "rehype-external-links": "1.0.1",
+    "rehype-slug": "^5.0.1",
     "sass": "1.53.0",
-    "tailwindcss": "3.0.23",
-    "typescript": "4.5.5"
+    "tailwindcss": "3.1.4",
+    "typescript": "4.7.4"
   },
   "packageManager": "yarn@1.22.19"
 }
